Added test for testing winner of votes